@@ -1,3 +1,7 @@
+2020-05-24  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* glfw.rb: Added platform-specific API
+
 2020-04-25  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
